# agora-tribunal

./: .gitignore  README.md  SECURITY.md  config.yaml  pyproject.toml  specs.txt
.claude/agents/: agora-architect.md  agora-hacker.md  agora-judge.md  agora-pragmatist.md  agora-qa.md  agora-resolver.md  agora-scientist.md  agora-sre.md
.claude/skills/agora/: PROTOCOL.md  SKILL.md
agora/: cli.py  config.py  debater.py  gate.py  graph.py  llm.py  models.py  nodes.py  state.py
evals/: candidates.md
ledgers/: ledger.md
prompts/: _claim_protocol.md  architect.md  frame.md  judge.md  qa.md  scientist.md  synthesizer.md
tests/: test_gate.py  test_models.py
